모바일버전
11

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>펩시골라</title>
+    <meta property="og:title" content=pepsi gola>
+    <meta property="og:site_name" content=펩시콜라>
+    <meta property="og:url" content=https://kimgigon123123.github.io/pepsi-gola/>
+    <meta property="og:description" content=펩시콜라>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=제공소스/cover.png>
     <!--favicon 이미지 연결-->
     <!--link:favicon-->
     <link rel="shortcut icon" href="제공소스/favicon.ico" type="image/x-icon">
