--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content=https://kimgigon123123.github.io/pepsi-gola/>
     <meta property="og:description" content=123123123>
     <meta property="og:type" content="">
-    <meta property="og:image" content=/제공소스/cover.png>
+    <meta property="og:image" content=/제공소스/logo.png>
     <!--favicon 이미지 연결-->
     <!--link:favicon-->
     <link rel="shortcut icon" href="제공소스/favicon.ico" type="image/x-icon">
