--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>펩시골라</title>
     <meta property="og:title" content=펩시골라>
     <meta property="og:site_name" content=펩시골라>
-    <meta property="og:url" content=https://kimgigon123123.github.io/pepsi-gola/>
+    <meta property="og:url" content="https://kimgigon123123.github.io/pepsi-gola/">
     <meta property="og:description" content=123123123>
     <meta property="og:type" content="">
-    <meta property="og:image" content=https://kimgigon123123.github.io/pepsi-gola/image/logo.png>
+    <meta property="og:image" content="https://kimgigon123123.github.io/pepsi-gola/image/logo.png">
     <!--favicon 이미지 연결-->
     <!--link:favicon-->
     <link rel="shortcut icon" href="제공소스/favicon.ico" type="image/x-icon">
