--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="og:url" content="https://kimgigon123123.github.io/pepsi-gola/">
     <meta property="og:description" content=123123123>
     <meta property="og:type" content="">
-    <meta property="og:image" content="https://kimgigon123123.github.io/pepsi-gola/image/logo.png/">
+    <meta property="og:image" content="https://kimgigon123123.github.io/pepsi-gola/image/cover.png/">
     <!--favicon 이미지 연결-->
     <!--link:favicon-->
-    <link rel="shortcut icon" href="제공소스/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
     <!-- css 파일 연결 link 탭-->
     <!--reset css 연결 구문-->
@@ -26,7 +26,7 @@
     <!-- shit +  \  |-->
     
     <div class="logo">
-        <img src="제공소스/logo.png" alt="pepsi gola brand logo">
+        <img src="image/logo.png" alt="pepsi gola brand logo">
     </div>
 
 <div class="menu">    
@@ -36,7 +36,7 @@
         <a href="#">고객센터</a> <!-- #:hash ,클릭만 가능-->  
 </div>
 <div class="hero_img">
-    <img src="제공소스/visual.png" alt="펩시골라 새로운 맛 출시">
+    <img src="image/visual.png" alt="펩시골라 새로운 맛 출시">
 </div>
 <!-- /.hero_img -->
 <div class="title">
@@ -45,13 +45,13 @@
 </div> 
  <div class="clips">
     <div class="clip">
-    <img src="제공소스/movie1.jpg" alt="펩시vs코카">
+    <img src="image/movie1.jpg" alt="펩시vs코카">
     <h2>펩시</h2>
     <p>코카콜라</p>
 
  </div>
     <div class="clip">  
-    <img src="제공소스/movie2.jpg" alt="펩시콜라 새로운맛">
+    <img src="image/movie2.jpg" alt="펩시콜라 새로운맛">
     <h2>환타</h2>
     <p>밀키스</p>
  </div>
@@ -59,16 +59,16 @@
 </div>   
  <div class="social_media">
     <a href="#">
-        <img src="제공소스/kakao_icon.png" alt="kakao">
+        <img src="image/kakao_icon.png" alt="kakao">
      </a>
     <a href="#">
-        <img src="제공소스/naver_icon.png" alt="naver">
+        <img src="image/naver_icon.png" alt="naver">
      </a>
     <a href="#">
-        <img src="제공소스/insta_icon.png" alt="insta">
+        <img src="image/insta_icon.png" alt="insta">
      </a>
     <a href="#">
-        <img src="제공소스/yellow_icon.png" alt="yellow">
+        <img src="image/yellow_icon.png" alt="yellow">
      </a>
  </div>
  <!-- /.social_media -->  
