--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://kimgigon123123.github.io/pepsi-gola/">
     <meta property="og:description" content=123123123>
     <meta property="og:type" content="">
-    <meta property="og:image" content="https://kimgigon123123.github.io/pepsi-gola/image/cover.png/">
+    <meta property="og:image" content="https://kimgigon123123.github.io/pepsi-gola/image/cover.png">
     <!--favicon 이미지 연결-->
     <!--link:favicon-->
     <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
