--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>펩시골라</title>
     <meta property="og:title" content=펩시골라>
     <meta property="og:site_name" content=맛있음>
-    <meta property="og:url" content=https://kimgigon123123.github.io/pepsi-gola/>
+    <meta property="og:url" content=https://github.com/Kimgigon123123/pepsi-gola.git>
     <meta property="og:description" content=JMT임ㄹㅇ>
     <meta property="og:type" content="">
     <meta property="og:image" content=https://kimgigon123123.github.io/pepsi-gola/image/cover.png>
