--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>펩시골라</title>
     <meta property="og:title" content=펩시골라>
-    <meta property="og:site_name" content=맛있음>
-    <meta property="og:url" content=https://github.com/Kimgigon123123/pepsi-gola.git>
-    <meta property="og:description" content=JMT임ㄹㅇ>
-    <meta property="og:type" content="">
-    <meta property="og:image" content=https://kimgigon123123.github.io/pepsi-gola/image/cover.png>
+<meta property="og:site_name" content=맛있음>
+<meta property="og:url" content=https://kimgigon123123.github.io/pepsi-gola/>
+<meta property="og:description" content=JMT임ㄹㅇ>
+<meta property="og:type" content=website>
+<meta property="og:image" content=https://kimgigon123123.github.io/pepsi-gola/image/cover.png>
     <!--favicon 이미지 연결-->
     <!--link:favicon-->
     <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
