--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
 </div> 
  <div class="clips">
     <div class="clip">
-    <img src="image/movie1.jpg" alt="펩시vs코카">
+    <img src="image/youtube1.png" alt="펩시vs코카">
     <h2>펩시</h2>
     <p>코카콜라</p>
+    <a href="https://youtu.be/7daIViA7vZo" target="_blank">영상보기</a>
 
  </div>
     <div class="clip">  
-    <img src="image/movie2.jpg" alt="펩시콜라 새로운맛">
+    <img src="image/youtube2.png" alt="펩시콜라 새로운맛">
     <h2>환타</h2>
     <p>밀키스</p>
+    <a href="https://youtu.be/o_-LTS2Iobg" >영상보기</a>
  </div>
 
 </div>   
